making new branchc

--- a/citations.bib
+++ b/citations.bib
@@ -144,7 +144,7 @@ year = {2015}
   pages={22-30},}
 @misc{pyautofit,
   author = {James Nightingale and Richard Hayes},
-  title = {PyAutoFit: A classy Probablistic Programming Language for Complex Model-fitting},
+  title = {PyAutoFit: A classy Probabilistic Programming Language for Complex Model-fitting},
   year = {2020},
   publisher = {​GitHub},
   journal = {​GitHub repository},
