--- a/citations.bib
+++ b/citations.bib
@@ -60,7 +60,7 @@ url = {http://dx.doi.org/10.3847/1538-4365/aaee8c},
 volume = {239},
 year = {2018}
 }
-@article{corner2016,
+@article{corner,
   doi = {10.21105/joss.00024},
   url = {https://doi.org/10.21105/joss.00024},
   year  = {2016},
