docs for JOSS publication

--- a/files/citations.bib
+++ b/files/citations.bib
@@ -154,13 +154,17 @@ year = {2015}
   title = {`PyAutoFit`: A Classy Probabilistic Programming Language for Model Composition and Fitting},
   journal = {Journal of Open Source Software}
 }
-@misc{pyautolens,
-  author = {James Nightingale and Richard Hayes},
-  title = {PyAutoLens: Open-source Strong Gravitational Lensing},
-  year = {2020},
-  publisher = {​GitHub},
-  journal = {​GitHub repository},
-  url = {https://github.com/Jammy2211/PyAutoLens}
+@article{pyautolens,
+  doi = {10.21105/joss.02825},
+  url = {https://doi.org/10.21105/joss.02825},
+  year = {2021},
+  publisher = {The Open Journal},
+  volume = {6},
+  number = {58},
+  pages = {2825},
+  author = {Nightingale, J. W. and Hayes, R. G. and Ashley Kelly and Aristeidis Amvrosiadis and Amy Etherington and Qiuhan He and Nan Li and XiaoYue Cao and Jonathan Frawley and Shaun Cole and Andrea Enia and Carlos S. Frenk and David R. Harvey and Ran Li and Richard J. Massey and Mattia Negrello and Andrew Robertson},
+  title = {`PyAutoLens`: Open-Source Strong Gravitational Lensing},
+  journal = {Journal of Open Source Software}
 }
 @article{multinest,
 abstract = {We present further development and the first public release of our multimodal nested sampling algorithm, called MultiNest. This Bayesian inference tool calculates the evidence, with an associated error estimate, and produces posterior samples from distributions that may contain multiple modes and pronounced (curving) degeneracies in high dimensions. The developments presented here lead to further substantial improvements in sampling efficiency and robustness, as compared to the original algorithm presented in Feroz and Hobson, which itself significantly outperformed existing Markov chain Monte Carlo techniques in a wide range of astrophysical inference problems. The accuracy and economy of the MultiNest algorithm are demonstrated by application to two toy problems and to a cosmological inference problem focusing on the extension of the vanilla $\Lambda$ cold dark matter model to include spatial curvature and a varying equation of state for dark energy. The MultiNest software, which is fully parallelized using MPI and includes an interface to CosmoMC, is available at http://www.mrao.cam.ac.uk/software/multinest/. It will also be released as part of the SuperBayeS package, for the analysis of supersymmetric theories of particle physics, at http://www.superbayes.org. {\textcopyright} 2009 RAS.},
@@ -333,4 +337,19 @@ title = {{Galaxy structure with strong gravitational lensing: Decomposing the in
 url = {http://arxiv.org/abs/1901.07801},
 volume = {489},
 year = {2019}
+}
+@article{Anowar2019,
+    author = {Shajib, Anowar J},
+    title = "{Unified lensing and kinematic analysis for any elliptical mass profile}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {488},
+    number = {1},
+    pages = {1387-1400},
+    year = {2019},
+    month = {07},
+    abstract = "{We demonstrate an efficient method to compute the strong-gravitational-lensing deflection angle and magnification for any elliptical surface density profile. This method solves a numerical hurdle in lens modelling that has lacked a general solution for nearly three decades. The hurdle emerges because it is prohibitive to derive analytic expressions of the lensing quantities for most elliptical mass profiles. In our method, we first decompose an elliptical mass profile into concentric Gaussian components. We introduce an integral transform that provides us with a fast and accurate algorithm for this Gaussian decomposition. We derive analytic expressions of the lensing quantities for a Gaussian component. As a result, we can compute these quantities for the total mass profile by adding up the contributions from the individual components. This lensing analysis self-consistently completes the kinematic description in terms of Gaussian components presented by Cappellari (2008). Our method is general without extra computational burden unlike other methods currently in use.}",
+    issn = {0035-8711},
+    doi = {10.1093/mnras/stz1796},
+    url = {https://doi.org/10.1093/mnras/stz1796},
+    eprint = {https://academic.oup.com/mnras/article-pdf/488/1/1387/28937972/stz1796.pdf},
 }
