--- a/files/citations.tex
+++ b/files/citations.tex
@@ -86,4 +86,13 @@ This work uses the following software packages:
 \href{https://github.com/scipy/scipy}{\textt{Scipy}}
 \citep{scipy}
 
+\item
+\href{https://github.com/JohannesBuchner/UltraNest}{\textt{UltraNest}}
+\citep{ultranest}
+
+\item
+\href{https://github.com/minaskar/zeus}{\textt{zeus}}
+\citep{zeus1, zeus2}
+
+
 \end{itemize}
