--- a/files/citations.bib
+++ b/files/citations.bib
@@ -15,6 +15,7 @@ Title = {{Astropy: A community Python package for astronomy}},
 Volume = 558,
 Year = 2013,
 Bdsk-Url-1 = {https://dx.doi.org/10.1051/0004-6361/201322068}}
+
 @article{astropy2,
 Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 Adsurl = {https://ui.adsabs.harvard.edu/#abs/2018AJ....156..123T},
@@ -29,7 +30,9 @@ Primaryclass = {astro-ph.IM},
 Title = {{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}},
 Volume = {156},
 Year = 2018,
-Bdsk-Url-1 = {https://doi.org/10.3847/1538-3881/aabc4f}}
+Bdsk-Url-1 = {https://doi.org/10.3847/1538-3881/aabc4f}
+}
+
 @article{PyLops,
 abstract = {Linear operators and optimisation are at the core of many algorithms used in signal and image processing, remote sensing, and inverse problems. For small to medium-scale problems, existing software packages (e.g., MATLAB, Python numpy and scipy) allow for explicitly building dense (or sparse) matrices and performing algebraic operations (e.g., computation of matrix-vector products and manipulation of matrices) with syntax that closely represents their corresponding analytical forms. However, many real application, large-scale operators do not lend themselves to explicit matrix representations, usually forcing practitioners to forego of the convenient linear-algebra syntax available for their explicit-matrix counterparts. PyLops is an open-source Python library providing a flexible and scalable framework for the creation and combination of so-called linear operators, class-based entities that represent matrices and inherit their associated syntax convenience, but do not rely on the creation of explicit matrices. We show that PyLops operators can dramatically reduce the memory load and CPU computations compared to explicit-matrix calculations, while still allowing users to seamlessly use their existing knowledge of compact matrix-based syntax that scales to any problem size because no explicit matrices are required.},
 archivePrefix = {arXiv},
@@ -41,6 +44,7 @@ title = {{PyLops -- A Linear-Operator Python Library for large scale optimizatio
 url = {http://arxiv.org/abs/1907.12349},
 year = {2019}
 }
+
 @article{colossus,
 abstract = {This paper introduces Colossus, a public, open-source python package for calculations related to cosmology, the large-scale structure (LSS) of matter in the universe, and the properties of dark matter halos. The code is designed to be fast and easy to use, with a coherent, well-documented user interface. The cosmology module implements Friedman-Lemaitre-Robertson-Walker cosmologies including curvature, relativistic species, and different dark energy equations of state, and provides fast computations of the linear matter power spectrum, variance, and correlation function. The LSS module is concerned with the properties of peaks in Gaussian random fields and halos in a statistical sense, including their peak height, peak curvature, halo bias, and mass function. The halo module deals with spherical overdensity radii and masses, density profiles, concentration, and the splashback radius. To facilitate the rapid exploration of these quantities, Colossus implements more than 40 different fitting functions from the literature. I discuss the core routines in detail, with particular emphasis on their accuracy. Colossus is available at bitbucket.org/bdiemer/colossus.},
 archivePrefix = {arXiv},
@@ -60,6 +64,7 @@ url = {http://dx.doi.org/10.3847/1538-4365/aaee8c},
 volume = {239},
 year = {2018}
 }
+
 @article{corner,
   doi = {10.21105/joss.00024},
   url = {https://doi.org/10.21105/joss.00024},
