some tests fixed

--- a/files/citations.bib
+++ b/files/citations.bib
@@ -6,7 +6,7 @@ Author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud}, E.~J. 
 Doi = {10.1051/0004-6361/201322068},
 Eid = {A33},
 Eprint = {1307.6212},
-Journal = {\aap},
+Journal = {A\&A},
 Keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
 Month = oct,
 Pages = {A33},
@@ -22,7 +22,7 @@ Adsurl = {https://ui.adsabs.harvard.edu/#abs/2018AJ....156..123T},
 Author = {{Price-Whelan}, A.~M. and {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and {Conseil}, S. and {Shupe}, D.~L. and {Craig}, M.~W. and {Dencheva}, N. and {Ginsburg}, A. and {VanderPlas}, J.~T. and {Bradley}, L.~D. and {P{\'e}rez-Su{\'a}rez}, D. and {de Val-Borro}, M. and {Paper Contributors}, (Primary and {Aldcroft}, T.~L. and {Cruz}, K.~L. and {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Coordination Committee}, (Astropy and {Ardelean}, C. and {Babej}, T. and {Bach}, Y.~P. and {Bachetti}, M. and {Bakanov}, A.~V. and {Bamford}, S.~P. and {Barentsen}, G. and {Barmby}, P. and {Baumbach}, A. and {Berry}, K.~L. and {Biscani}, F. and {Boquien}, M. and {Bostroem}, K.~A. and {Bouma}, L.~G. and {Brammer}, G.~B. and {Bray}, E.~M. and {Breytenbach}, H. and {Buddelmeijer}, H. and {Burke}, D.~J. and {Calderone}, G. and {Cano Rodr{\'\i}guez}, J.~L. and {Cara}, M. and {Cardoso}, J.~V.~M. and {Cheedella}, S. and {Copin}, Y. and {Corrales}, L. and {Crichton}, D. and {D{\textquoteright}Avella}, D. and {Deil}, C. and {Depagne}, {\'E}. and {Dietrich}, J.~P. and {Donath}, A. and {Droettboom}, M. and {Earl}, N. and {Erben}, T. and {Fabbro}, S. and {Ferreira}, L.~A. and {Finethy}, T. and {Fox}, R.~T. and {Garrison}, L.~H. and {Gibbons}, S.~L.~J. and {Goldstein}, D.~A. and {Gommers}, R. and {Greco}, J.~P. and {Greenfield}, P. and {Groener}, A.~M. and {Grollier}, F. and {Hagen}, A. and {Hirst}, P. and {Homeier}, D. and {Horton}, A.~J. and {Hosseinzadeh}, G. and {Hu}, L. and {Hunkeler}, J.~S. and {Ivezi{\'c}}, {\v{Z}}. and {Jain}, A. and {Jenness}, T. and {Kanarek}, G. and {Kendrew}, S. and {Kern}, N.~S. and {Kerzendorf}, W.~E. and {Khvalko}, A. and {King}, J. and {Kirkby}, D. and {Kulkarni}, A.~M. and {Kumar}, A. and {Lee}, A. and {Lenz}, D. and {Littlefair}, S.~P. and {Ma}, Z. and {Macleod}, D.~M. and {Mastropietro}, M. and {McCully}, C. and {Montagnac}, S. and {Morris}, B.~M. and {Mueller}, M. and {Mumford}, S.~J. and {Muna}, D. and {Murphy}, N.~A. and {Nelson}, S. and {Nguyen}, G.~H. and {Ninan}, J.~P. and {N{\"o}the}, M. and {Ogaz}, S. and {Oh}, S. and {Parejko}, J.~K. and {Parley}, N. and {Pascual}, S. and {Patil}, R. and {Patil}, A.~A. and {Plunkett}, A.~L. and {Prochaska}, J.~X. and {Rastogi}, T. and {Reddy Janga}, V. and {Sabater}, J. and {Sakurikar}, P. and {Seifert}, M. and {Sherbert}, L.~E. and {Sherwood-Taylor}, H. and {Shih}, A.~Y. and {Sick}, J. and {Silbiger}, M.~T. and {Singanamalla}, S. and {Singer}, L.~P. and {Sladen}, P.~H. and {Sooley}, K.~A. and {Sornarajah}, S. and {Streicher}, O. and {Teuben}, P. and {Thomas}, S.~W. and {Tremblay}, G.~R. and {Turner}, J.~E.~H. and {Terr{\'o}n}, V. and {van Kerkwijk}, M.~H. and {de la Vega}, A. and {Watkins}, L.~L. and {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and {Zabalza}, V. and {Contributors}, (Astropy},
 Doi = {10.3847/1538-3881/aabc4f},
 Eid = {123},
-Journal = {\aj},
+Journal = {AJ},
 Keywords = {methods: data analysis, methods: miscellaneous, methods: statistical, reference systems, Astrophysics - Instrumentation and Methods for Astrophysics},
 Month = Sep,
 Pages = {123},
@@ -76,7 +76,7 @@ year = {2018}
   pages = {24},
   author = {Daniel Foreman-Mackey},
   title = {corner.py: Scatterplot matrices in Python},
-  journal = {The Journal of Open Source Software}
+  journal = {The J. Open Source Softw.}
 }
 @article{dynesty,
 abstract = {We present dynesty, a public, open-source, python package to estimate Bayesian posteriors and evidences (marginal likelihoods) using the dynamic nested sampling methods developed by Higson et al. By adaptively allocating samples based on posterior structure, dynamic nested sampling has the benefits of Markov chain Monte Carlo (MCMC) algorithms that focus exclusively on posterior estimation while retaining nested sampling's ability to estimate evidences and sample from complex, multimodal distributions. We provide an overview of nested sampling, its extension to dynamic nested sampling, the algorithmic challenges involved, and the various approaches taken to solve them in this and previous work. We then examine dynesty's performance on a variety of toy problems along with several astronomical applications. We find in particular problems dynesty can provide substantial improvements in sampling efficiency compared to popular MCMC approaches in the astronomical literature. More detailed statistical results related to nested sampling are also included in the appendix.},
@@ -87,7 +87,7 @@ doi = {10.1093/mnras/staa278},
 eprint = {1904.02180},
 file = {:home/jammy/Documents/Papers/PPLs/Dynesty.pdf:pdf},
 issn = {0035-8711},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {data analysis,methods,statistical},
 number = {3},
 pages = {3132--3158},
@@ -104,7 +104,7 @@ doi = {10.1086/670067},
 eprint = {1202.3665},
 file = {:home/jammy/Documents/Papers/PPLs/Emcee.pdf:pdf},
 issn = {00046280},
-journal = {Publications of the Astronomical Society of the Pacific},
+journal = {Publ. Astron. Soc. Pac.},
 number = {925},
 pages = {306--312},
 title = {{emcee : The MCMC Hammer }},
@@ -114,7 +114,7 @@ year = {2013}
 @article{matplotlib,
   Author    = {Hunter, J. D.},
   Title     = {Matplotlib: A 2D graphics environment},
-  Journal   = {Computing in Science \& Engineering},
+  Journal   = {Comput Sci Eng},
   Volume    = {9},
   Number    = {3},
   Pages     = {90--95},
@@ -141,7 +141,7 @@ year = {2015}
 @article{numpy,
   author={S. {van der Walt} and S. C. {Colbert} and G. {Varoquaux}},
   doi={10.1109/MCSE.2011.37},
-  journal={Computing in Science Engineering},
+  journal={Comput Sci Eng},
   title={The NumPy Array2D: A Structure for Efficient Numerical Computation},
   year={2011},
   volume={13},
@@ -157,7 +157,7 @@ year = {2015}
   pages = {2550},
   author = {Nightingale, J. W. and Hayes, R. G. and Griffiths, M.},
   title = {`PyAutoFit`: A Classy Probabilistic Programming Language for Model Composition and Fitting},
-  journal = {Journal of Open Source Software}
+  journal = {J. Open Source Softw.}
 }
 @article{pyautolens,
   doi = {10.21105/joss.02825},
@@ -169,7 +169,7 @@ year = {2015}
   pages = {2825},
   author = {Nightingale, J. W. and Hayes, R. G. and Ashley Kelly and Aristeidis Amvrosiadis and Amy Etherington and Qiuhan He and Nan Li and XiaoYue Cao and Jonathan Frawley and Shaun Cole and Andrea Enia and Carlos S. Frenk and David R. Harvey and Ran Li and Richard J. Massey and Mattia Negrello and Andrew Robertson},
   title = {`PyAutoLens`: Open-Source Strong Gravitational Lensing},
-  journal = {Journal of Open Source Software}
+  journal = {J. Open Source Softw.}
 }
 @article{multinest,
 abstract = {We present further development and the first public release of our multimodal nested sampling algorithm, called MultiNest. This Bayesian inference tool calculates the evidence, with an associated error estimate, and produces posterior samples from distributions that may contain multiple modes and pronounced (curving) degeneracies in high dimensions. The developments presented here lead to further substantial improvements in sampling efficiency and robustness, as compared to the original algorithm presented in Feroz and Hobson, which itself significantly outperformed existing Markov chain Monte Carlo techniques in a wide range of astrophysical inference problems. The accuracy and economy of the MultiNest algorithm are demonstrated by application to two toy problems and to a cosmological inference problem focusing on the extension of the vanilla $\Lambda$ cold dark matter model to include spatial curvature and a varying equation of state for dark energy. The MultiNest software, which is fully parallelized using MPI and includes an interface to CosmoMC, is available at http://www.mrao.cam.ac.uk/software/multinest/. It will also be released as part of the SuperBayeS package, for the analysis of supersymmetric theories of particle physics, at http://www.superbayes.org. {\textcopyright} 2009 RAS.},
@@ -180,7 +180,7 @@ doi = {10.1111/j.1365-2966.2009.14548.x},
 eprint = {0809.3437},
 isbn = {0035-8711},
 issn = {00358711},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Methods: Data analysis,Methods: Statistical},
 number = {4},
 pages = {1601--1614},
@@ -198,7 +198,7 @@ doi = {10.1051/0004-6361/201322971},
 eprint = {1402.0004},
 file = {:home/jammy/Documents/Papers/Stats/ButchnerPyMultiNest.pdf:pdf},
 issn = {14320746},
-journal = {Astronomy and Astrophysics},
+journal = {A&A},
 keywords = {Accretion, accretion disks,Galaxies: high-redshift,Galaxies: nuclei,Methods: data analysis,Methods: statistical,X-rays: galaxies},
 pages = {A125},
 title = {{X-ray spectral modelling of the AGN obscuring region in the CDFS: Bayesian model selection and catalogue}},
@@ -232,7 +232,7 @@ year = {2018}
 @article{pyswarms,
     author  = {Lester James V. Miranda},
     title   = "{P}y{S}warms, a research-toolkit for {P}article {S}warm {O}ptimization in {P}ython",
-    journal = {Journal of Open Source Software},
+    journal = {J. Open Source Softw.},
     year    = {2018},
     volume  = {3},
     issue   = {21},
@@ -293,7 +293,7 @@ year = {2018}
 @ARTICLE{ultranest,
        author = {{Buchner}, Johannes},
         title = "{UltraNest - a robust, general purpose Bayesian inference engine}",
-      journal = {The Journal of Open Source Software},
+      journal = {The J. Open Source Softw.},
      keywords = {C, Monte Carlo, Python, Nested Sampling, C++, Bayesian inference, Fortran, Bayes factors, Statistics - Computation, Astrophysics - Instrumentation and Methods for Astrophysics},
          year = 2021,
         month = apr,
@@ -331,7 +331,7 @@ author = {Nightingale, J. W. and Dye, S.},
 doi = {10.1093/mnras/stv1455},
 eprint = {1412.7436},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies: evolution,Galaxies: structure,Methods: observational},
 month = {sep},
 number = {3},
@@ -349,7 +349,7 @@ doi = {10.1093/mnras/sty1264},
 eprint = {1708.07377},
 file = {:home/jammy/Documents/Papers{\_}Me/AutoLensChangesMarked.pdf:pdf},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxy: structure,Gravitational lensing,Methods: data analysis},
 number = {4},
 pages = {4738--4784},
@@ -367,7 +367,7 @@ doi = {10.1093/mnras/stz2220},
 eprint = {1901.07801},
 file = {:home/jammy/Documents/Papers{\_}Me/Gal{\_}Structure{\_}Final/GalaxyStructure.pdf:pdf},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies: Evolution,Galaxies: Formation,Gravitational lensing: Strong},
 number = {2},
 pages = {2049--2068},
@@ -379,7 +379,7 @@ year = {2019}
 @article{Anowar2019,
     author = {Shajib, Anowar J},
     title = "{Unified lensing and kinematic analysis for any elliptical mass profile}",
-    journal = {Monthly Notices of the Royal Astronomical Society},
+    journal = {MNRAS},
     volume = {488},
     number = {1},
     pages = {1387-1400},
