--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -82,7 +82,7 @@ doi = {10.1093/mnras/staa278},
 eprint = {1904.02180},
 file = {:home/jammy/Documents/Papers/PPLs/Dynesty.pdf:pdf},
 issn = {0035-8711},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {data analysis,methods,statistical},
 number = {3},
 pages = {3132--3158},
@@ -164,7 +164,7 @@ doi = {10.1111/j.1365-2966.2009.14548.x},
 eprint = {0809.3437},
 isbn = {0035-8711},
 issn = {00358711},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Methods: Data analysis,Methods: Statistical},
 number = {4},
 pages = {1601--1614},
@@ -182,7 +182,7 @@ doi = {10.1051/0004-6361/201322971},
 eprint = {1402.0004},
 file = {:home/jammy/Documents/Papers/Stats/ButchnerPyMultiNest.pdf:pdf},
 issn = {14320746},
-journal = {Astronomy and Astrophysics},
+journal = {A&A},
 keywords = {Accretion, accretion disks,Galaxies: high-redshift,Galaxies: nuclei,Methods: data analysis,Methods: statistical,X-rays: galaxies},
 pages = {A125},
 title = {{X-ray spectral modelling of the AGN obscuring region in the CDFS: Bayesian model selection and catalogue}},
@@ -326,7 +326,7 @@ volume = {811},
 year = {2015}
 }
 @article{Czoske2012,
-abstract = {This paper presents the full Very Large Telescope (VLT)/VIMOS-IFU data set and related data products from an ESO Large Programme with the observational goal of obtaining two-dimensional kinematic data of early-type lens galaxies, out to one effective radius. The sample consists of 17 early-type galaxies (ETGs) selected from the SLACS gravitational-lens survey. The galaxies cover the redshift range from 0.08 to 0.35 and have stellar velocity dispersions between 200 and 350 kms-1. This programme is complemented by a similar observational programme on Keck, using long-slit spectroscopy. In combination with multi-band imaging data, the kinematic data provide stringent constraints on the inner mass profiles of ETGs beyond the local Universe. Our Large Programme thus extends studies of nearby ETGs (e.g. SAURON/ATLAS3D) by an order of magnitude in distance and towards higher masses. We provide an overview of our observational strategy, the data products (luminosity-weighted spectra andHubble Space Telescopeimages) and derived products (i.e. two-dimensional fields of velocity dispersions and streaming motions) that have been used in a number of published and forthcoming lensing, kinematic and stellar-population studies. These studies also pave the way for future studies of ETGs atz≈ 1 with the upcoming extremely large telescopes. {\textcopyright} 2011 The Authors Monthly Notices of the Royal Astronomical Society {\textcopyright} 2011 RAS.},
+abstract = {This paper presents the full Very Large Telescope (VLT)/VIMOS-IFU data set and related data products from an ESO Large Programme with the observational goal of obtaining two-dimensional kinematic data of early-type lens galaxies, out to one effective radius. The sample consists of 17 early-type galaxies (ETGs) selected from the SLACS gravitational-lens survey. The galaxies cover the redshift range from 0.08 to 0.35 and have stellar velocity dispersions between 200 and 350 kms-1. This programme is complemented by a similar observational programme on Keck, using long-slit spectroscopy. In combination with multi-band imaging data, the kinematic data provide stringent constraints on the inner mass profiles of ETGs beyond the local Universe. Our Large Programme thus extends studies of nearby ETGs (e.g. SAURON/ATLAS3D) by an order of magnitude in distance and towards higher masses. We provide an overview of our observational strategy, the data products (luminosity-weighted spectra andHubble Space Telescopeimages) and derived products (i.e. two-dimensional fields of velocity dispersions and streaming motions) that have been used in a number of published and forthcoming lensing, kinematic and stellar-population studies. These studies also pave the way for future studies of ETGs atz≈ 1 with the upcoming extremely large telescopes. {\textcopyright} 2011 The Authors MNRAS {\textcopyright} 2011 RAS.},
 archivePrefix = {arXiv},
 arxivId = {1108.0577},
 author = {Czoske, Oliver and Barnab{\`{e}}, Matteo and Koopmans, L{\'{e}}on V.E. and Treu, Tommaso and Bolton, Adam S.},
@@ -334,7 +334,7 @@ doi = {10.1111/j.1365-2966.2011.19726.x},
 eprint = {1108.0577},
 isbn = {00358711},
 issn = {00358711},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies: elliptical and lenticular, cD,Galaxies: kinematics and dynamics,Galaxies: structure,Gravitational lensing: strong,Techniques: spectroscopic},
 number = {1},
 pages = {656--668},
@@ -350,7 +350,7 @@ author = {Dye, S. and Negrello, M. and Hopwood, R. and Nightingale, J. W. and Bu
 doi = {10.1093/mnras/stu305},
 eprint = {1311.5893},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies: evolution,Galaxies: structure},
 number = {3},
 pages = {2013--2025},
@@ -367,7 +367,7 @@ doi = {10.1093/mnras/sty021},
 eprint = {1801.01831},
 file = {:home/jammy/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Enia et al. - 2018 - The Herschel-ATLAS Magnifications and physical sizes of 500-$\mu$m-selected strongly lensed galaxies.pdf:pdf},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies: structure,Gravitational lensing: strong,Instrumentation: interferometers},
 number = {3},
 pages = {3467--3484},
@@ -415,7 +415,7 @@ author = {McCully, Curtis and Keeton, Charles R. and Wong, Kenneth C. and Zablud
 doi = {10.1093/mnras/stu1316},
 eprint = {1401.0197},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Gravitational lensing: strong,Gravitational lensing: weak},
 month = {oct},
 number = {4},
@@ -432,7 +432,7 @@ author = {Negrello, M. and Hopwood, R. and Dye, S. and da Cunha, E. and Serjeant
 doi = {10.1093/mnras/stu413},
 eprint = {1311.5898},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies: elliptical and lenticular, cD,Galaxies: evolution,Galaxies: formation,Gravitational lensing: strong,Infrared: galaxies,Submillimetre: galaxies},
 number = {3},
 pages = {1999--2012},
@@ -449,7 +449,7 @@ author = {Nightingale, J. W. and Dye, S.},
 doi = {10.1093/mnras/stv1455},
 eprint = {1412.7436},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies: evolution,Galaxies: structure,Methods: observational},
 month = {sep},
 number = {3},
@@ -467,7 +467,7 @@ doi = {10.1093/mnras/sty1264},
 eprint = {1708.07377},
 file = {:home/jammy/Documents/Papers{\_}Me/AutoLensChangesMarked.pdf:pdf},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxy: structure,Gravitational lensing,Methods: data analysis},
 number = {4},
 pages = {4738--4784},
@@ -485,7 +485,7 @@ doi = {10.1093/mnras/stz2220},
 eprint = {1901.07801},
 file = {:home/jammy/Documents/Papers{\_}Me/Gal{\_}Structure{\_}Final/GalaxyStructure.pdf:pdf},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies: Evolution,Galaxies: Formation,Gravitational lensing: Strong},
 number = {2},
 pages = {2049--2068},
@@ -520,7 +520,7 @@ doi = {10.1093/mnras/stx483},
 eprint = {1607.00017},
 file = {:home/jammy/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Suyu et al. - 2017 - H0LiCOW - I. H0 Lenses in COSMOGRAIL's Wellspring Program overview.pdf:pdf},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Cosmological parameters,Distance scale,Galaxies: structure,Gravitational lensing: strong,HE 0435-1223,HE 1104-1805,Quasars: individual:B1608+656,RXJ1131-1231,WFI2033-4723},
 number = {3},
 pages = {2590--2604},
@@ -555,7 +555,7 @@ doi = {10.1111/j.1365-2966.2008.14005.x},
 eprint = {0805.0201},
 isbn = {0892-0915 (Print)$\backslash$r0892-0915 (Linking)},
 issn = {00358711},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Dark matter,Galaxies: haloes,Galaxies: structure,Gravitational lensing},
 month = {jan},
 number = {3},
@@ -573,7 +573,7 @@ author = {Vegetti, S. and Koopmans, L. V.E. and Auger, M. W. and Treu, T. and Bo
 doi = {10.1093/mnras/stu943},
 eprint = {1405.3666},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies,Structure},
 month = {aug},
 number = {3},
@@ -620,7 +620,7 @@ author = {Richard, Johan and Jauzac, Mathilde and Limousin, Marceau and Jullo, E
 doi = {10.1093/mnras/stu1395},
 file = {:home/jammy/Documents/Papers/StrongLensCluster/Richard2017HFFModels.pdf:pdf},
 issn = {13652966},
-journal = {Monthly Notices of the Royal Astronomical Society},
+journal = {MNRAS},
 keywords = {Galaxies clusters: individual: A1063S,Galaxies clusters: individual: Abell 370,Galaxies clusters: individual: MACS J0416.1-2403,Galaxies clusters: individual: MACS J0717.5+3745,Galaxies clusters: individual: MACS J1149.5+2223,galaxies clusters: individual: Abell 2744},
 number = {1},
 pages = {268--289},
@@ -631,7 +631,7 @@ year = {2014}
 @article{Powell2020,
     author = {Powell, Devon and Vegetti, Simona and McKean, John P and Spingola, Cristiana and Rizzo, Francesca and Stacey, Hannah R},
     title = "{A novel approach to visibility-space modelling of interferometric gravitational lens observations at high angular resolution}",
-    journal = {Monthly Notices of the Royal Astronomical Society},
+    journal = {MNRAS},
     volume = {501},
     number = {1},
     pages = {515-530},
